name:                ghcjs-perch

-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.2.1

synopsis:            GHCJS version of Perch library.

-- A longer description of the package.
-- description:

license:             MIT

license-file:        LICENSE

author:              Arthur S. Fayzrakhmanov

maintainer:          heraldhoi@gmail.com

copyright:           Copyright © 2015 Arthut S. Fayzrakhmanov. All rights reserved.

category:            Web

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a
-- README.
-- extra-source-files:

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10


library
  if impl(ghcjs >= 0.1)
  -- Modules exported by the library.
      exposed-modules: GHCJS.Perch

      -- Modules included in this library but not exported.
      other-modules: Internal.API
                     Internal.FFI
                     Internal.Perch
                     Internal.Type

      -- LANGUAGE extensions used by modules in this package.
      -- other-extensions:

      -- Other library packages from which modules are imported.
      build-depends:       base         >= 4.7     && < 4.9,
                           transformers >= 0.4.2.0 && < 0.5,
                           ghcjs-base

      hs-source-dirs:      src

      default-language:    Haskell2010
  else
      exposed-modules: GHCJS.Perch

      -- Modules included in this library but not exported.
      other-modules: Internal.API
                     Internal.FFI
                     Internal.Perch
                     Internal.Type

      -- LANGUAGE extensions used by modules in this package.
      -- other-extensions:

      -- Other library packages from which modules are imported.
      build-depends:       base         >= 4.7     && < 4.9,
                           transformers >= 0.4.2.0 && < 0.5

      hs-source-dirs:      src

      default-language:    Haskell2010

   ghc-options: -Wall -fno-warn-unused-do-bind -O